src/index.css
:root {
  --dark-background: #181c20;
  --dark-backgroundMain: #0e1117;
  --blue: #38427c;
  --gold: goldenrod;
  --grey: #666666;
  --light-grey: #b4b4b4;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #424242;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

* {
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none; /* no underline */
}

.header {
  position: fixed;
  top: 0;
  width: 100%;
}

.header-space {
  height: 60px;
}

.gold {
  color: var(--gold);
}

.blue {
  color: var(--blue);
}

.nav {
  background-color: white;
  height: 60px;
  padding: 0px 20px;
  box-shadow: 0px 0px 5px grey;
  display: flex;
  align-items: center;
  justify-content: space-between;
  transition: all 0.2s ease-in-out;
}

.nav-dark {
  background-color: var(--dark-background);
  color: white;
  height: 60px;
  padding: 0px 20px;
  box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.6);
  display: flex;
  align-items: center;
  justify-content: space-between;
  transition: all 0.2s ease-in-out;
}

.nav-menu {
  display: flex;
  list-style: none;
  float: none;
  position: absolute;
  top: 30px;
  left: 50%;
  transform: translate(-50%, -50%);
}

.nav-link {
  margin: 0px 5px;
  font-weight: 500;
  font-size: 18px;
}

.nav-link:hover {
  cursor: pointer;
}

.nav-title {
  font-size: 18px;
}

.nav-icon {
  height: 22px;
  margin: 0px 5px;
}

.nav-icon:hover {
  cursor: pointer;
}

.container {
  margin: 40px;
}

.light {
  background-color: #e6e6e6;
  padding-bottom: 1000px;
  transition: all 0.2s ease-in-out;
}

.dark {
  background-color: var(--dark-backgroundMain);
  padding-bottom: 1000px;
  transition: all 0.2s ease-in-out;
}

.section-main {
  background-color: white;
  margin: auto;
  max-width: 800px;
  margin-top: 40px;
  border-radius: 15px;
  box-shadow: 0px 0px 5px grey;
  display: flex;
  flex-direction: column;
  align-items: center;
  transition: all 0.2s ease-in-out;
}

.section-main-dark {
  background-color: var(--dark-background);
  color: rgb(223, 223, 223);

  margin: auto;
  max-width: 800px;
  margin-top: 40px;
  border-radius: 15px;
  box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.6);
  display: flex;
  flex-direction: column;
  align-items: center;
  transition: all 0.2s ease-in-out;
}

.home-title {
  font-size: 24px;
  font-weight: 700;
  margin: 0px 10px;
  text-align: center;
}

.home-subtitle {
  margin: 2px 10px;
  font-size: 20px;
  font-weight: 600;
  text-align: center;
}

.home-smalltitle {
  color: var(--grey);
  margin: 5px 10px;
  margin-top: 15px;
  font-size: 16px;
  font-weight: 500px;
  text-align: center;
  padding-bottom: 50px;
}

.home-smalltitle-dark {
  color: var(--light-grey);

  margin: 5px 10px;
  margin-top: 15px;
  font-size: 16px;
  font-weight: 500px;
  text-align: center;
  padding-bottom: 50px;
}

.home-logo {
  padding-top: 50px;
  max-height: 180px;
}

.home-sm {
  margin: 5px 10px;
  margin-top: 12px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 32px;
}

.home-sm-icon {
  margin: 0px 5px;
  font-size: 28px;
}

.home-sm-icon:hover {
  cursor: pointer;
  transition: all 0.2s ease-in-out;
  font-size: 32px;
  margin: 0px 5px;
}

@media (max-width: 600px) {
  .nav-icon {
    display: none;
  }

  .nav-title {
    display: none;
  }
}

.cards-container {
  margin: -5px 0px 30px;
}

.exp-card {
  margin: 20px 45px;
}

.exp-card-top {
  display: flex;
  justify-content: space-between;
}

.exp-card-title {
  font-size: 15px;
  font-weight: 800;
}

.exp-card-subtitle {
  font-size: 15px;
  font-weight: 500;
}

.exp-card-about {
  color: var(--grey);

  font-size: 14px;
  font-weight: 400;
  margin: 4px 20px;
}

.exp-card-about-dark {
  color: var(--light-grey);

  font-size: 14px;
  font-weight: 400;
  margin: 4px 20px;
}

.read-more-btn {
  background: none;
  color: var(--blue);
  border: none;
  padding: 0;
  font: inherit;
  font-weight: 700;
  cursor: pointer;
  outline: inherit;
}

.read-more-btn-dark {
  background: none;
  color: var(--gold);
  border: none;
  padding: 0;
  font: inherit;
  font-weight: 700;
  cursor: pointer;
  outline: inherit;
}

.wip-title {
  color: var(--blue);
  font-size: 22px;
  font-weight: 700;
  margin: 5px;
  padding-top: 40px;
  text-align: center;
}

.wip-title-dark {
  color: var(--gold);
  font-size: 22px;
  font-weight: 700;
  margin: 5px;
  padding-top: 40px;
  text-align: center;
}

.wip-p {
  margin: 5px;
  padding-bottom: 20px;
  text-align: center;
}

@media (max-width: 600px) {
  .section-main {
    margin-top: 20px;
  }

  .section-main-dark {
    margin-top: 20px;
  }

  .container {
    margin: 20px;
  }

  .cards-container {
    margin: -5px 0px 5px;
    margin-bottom: 20px;
  }

  .exp-card {
    margin: 20px 15px;
  }

  .exp-card-title {
    font-size: 12px;
    font-weight: 600;
  }

  .exp-card-subtitle {
    font-size: 12px;
  }

  .exp-card-about {
    font-size: 12px;
  }

  .exp-card-about-dark {
    font-size: 12px;
  }

  .wip-title {
    font-size: 18px;
    margin-top: -10px;
  }

  .wip-title-dark {
    font-size: 18px;
    margin-top: -10px;
  }
}

